--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "xopera vscode ext",
     "repository": "https://github.com/radon-h2020/radon-xopera-saas-plugin",
     "publisher": "radon",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "engines": {
         "vscode": "^1.49.0"
     },
@@ -54,31 +54,33 @@
     },
     "devDependencies": {
         "@types/glob": "^7.1.3",
-        "@types/js-yaml": "^3.12.5",
-        "@types/jsdom": "^16.2.4",
-        "@types/mocha": "^8.0.0",
-        "@types/node": "^14.0.27",
+        "@types/js-yaml": "^3.12.6",
+        "@types/jsdom": "^16.2.6",
+        "@types/mocha": "^8.2.0",
+        "@types/node": "^14.14.22",
         "@types/request": "^2.48.5",
         "@types/tough-cookie": "^4.0.0",
         "@types/vscode": "^1.49.0",
-        "@typescript-eslint/eslint-plugin": "^4.1.1",
-        "@typescript-eslint/parser": "^4.1.1",
-        "eslint": "^7.9.0",
+        "@typescript-eslint/eslint-plugin": "^4.14.2",
+        "@typescript-eslint/parser": "^4.14.2",
+        "eslint": "^7.19.0",
         "glob": "^7.1.6",
-        "mocha": "^8.1.3",
+        "mocha": "^8.2.1",
         "rimraf": "^3.0.2",
-        "terser-webpack-plugin": "^4.2.2",
-        "ts-loader": "^8.0.4",
-        "typescript": "^4.0.2",
-        "vsce": "^1.79.5",
-        "webpack": "^4.44.2",
+        "terser-webpack-plugin": "^4.2.3",
+        "ts-loader": "^8.0.14",
+        "typescript": "^4.1.3",
+        "vsce": "^1.85.0",
+        "webpack": "^4.46.0",
         "webpack-cli": "^3.3.12"
     },
     "dependencies": {
-        "js-yaml": "^3.14.0",
+        "js-yaml": "^3.14.1",
         "jsdom": "15.2.1",
         "request": "^2.88.2",
         "tough-cookie": "^4.0.0",
-        "xpath": "0.0.29"
+        "xpath": "0.0.29",
+        "utf-8-validate": "5.0.4",
+        "bufferutil": "4.0.3"
     }
 }
